# David_bak

./: .gitignore
UserCode/dsperka/wprimetb/test_theta/theta/root/: CMakeLists.txt  create_testhistos  create_testtree  root_histogram.cpp
UserCode/dsperka/wprimetb/test_theta/theta/root/.bin/: root_histogram.d  root_minuit.d  root_ntuple_source.d  rootfile_database.d
UserCode/dsperka/wprimetb/test_theta/theta/root/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/test_theta/theta/src/: CMakeLists.txt  Makefile  cfg-utils.cpp  matrix.cpp  random.cpp  run.cpp
UserCode/dsperka/wprimetb/test_theta/theta/src/.bin/: cfg-utils.d  database.d  distribution.d  histogram-function.d  histogram.d  main.d  minimizer.d  model.d  phys.d  plugin.d  producer.d  random-utils.d  random.d  redirect_stdio.d  run.d  utils.d  variables.d
UserCode/dsperka/wprimetb/test_theta/theta/src/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/test_theta/theta/utils/test/: CMakeLists.txt  plugintest-mcmc.cpp
UserCode/dsperka/wprimetb/theta/: CMakeLists.txt  Makefile  readme-update.txt
UserCode/dsperka/wprimetb/theta/.svn/: all-wcprops  dir-prop-base  entries
UserCode/dsperka/wprimetb/theta/.svn/text-base/: Doxyfile.svn-base  Makefile.options.svn-base  Makefile.rules.svn-base
UserCode/dsperka/wprimetb/theta/amdlibm/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/amdlibm/include/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/doc/.svn/: entries
UserCode/dsperka/wprimetb/theta/examples/: gaussoverflat-mle.cfg
UserCode/dsperka/wprimetb/theta/examples/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/gridpack/: build.sh
UserCode/dsperka/wprimetb/theta/gridpack/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/gridpack/scripts/: copydeps.py
UserCode/dsperka/wprimetb/theta/interface/: distribution.hpp  exception.hpp  histogram-with-uncertainties.hpp  histogram.hpp  model.hpp  plugin.hpp  plugin.tcc  producer.hpp  random.hpp
UserCode/dsperka/wprimetb/theta/interface/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/lib/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/libconfig/.svn/: entries
UserCode/dsperka/wprimetb/theta/liblbfgs/: Makefile  lbfgs.c
UserCode/dsperka/wprimetb/theta/liblbfgs/.bin/: lbfgs.d
UserCode/dsperka/wprimetb/theta/liblbfgs/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/llvm/: Makefile  codegen-interface.txt  llvm_exp_function.cpp  llvm_interface.hpp  llvm_model.cpp  llvm_model.hpp
UserCode/dsperka/wprimetb/theta/llvm/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/plugins/: CMakeLists.txt  asimov_likelihood_widths.hpp  cls_limits.cpp  cls_limits.hpp  core.cpp  deltanll_hypotest.hpp  deltanll_intervals.cpp  deltanll_intervals.hpp  gamma_distribution.cpp  histo_source.cpp  interpolating-histogram.cpp  linear-histo-morph.cpp  linear-histo-morph.hpp  mcmc-result.cpp  mcmc.cpp  mcmc_chain.cpp  mcmc_mean_prediction.hpp  mcmc_minimizer.cpp  mcmc_posterior_histo.hpp  mcmc_quantiles.cpp  minimizer_chain.hpp  mle.hpp  multiply.cpp  nll_scan.cpp  nll_scan.hpp  replay_toys.hpp  secant.hpp  simple_linear_histomorph.cpp  simple_linear_histomorph.hpp  sqlite_database.hpp  sqlite_database_in.cpp  textout_database.cpp
UserCode/dsperka/wprimetb/theta/plugins/.bin/: add.d  add_sources.d  asimov_likelihood_widths.d  blackhole_database.d  cls_limits.d  constrain_ratio.d  convert_database.d  core.d  cubiclinear_histomorph.d  deltanll_hypotest.d  deltanll_intervals.d  direct_data_histo.d  equidistant_deltas.d  exp_function.d  gamma_distribution.d  histo_source.d  interpolating-histogram.d  linear-histo-morph.d  mcmc-result.d  mcmc.d  mcmc_chain.d  mcmc_mean_prediction.d  mcmc_minimizer.d  mcmc_posterior_histo.d  mcmc_posterior_ratio.d  mcmc_quantiles.d  minimizer_chain.d  mle.d  multiplexing_database.d  multiply.d  neyman_belt.d  nl_gauss.d  nl_one_over_sqrt.d  nll_scan.d  pseudodata_writer.d  replay_toys.d  simple_linear_histomorph.d  sqlite_database.d  sqlite_database_in.d  sys_rate_function.d  (+2 more)
UserCode/dsperka/wprimetb/theta/plugins/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/root/: CMakeLists.txt  Makefile  create_testhistos  create_testtree  root_minuit.hpp
UserCode/dsperka/wprimetb/theta/root/.bin/: histos.d  root_histogram.d  root_minuit.d  root_ntuple_source.d  rootfile_database.d
UserCode/dsperka/wprimetb/theta/root/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/src/: Makefile  atomic.cxx  distribution.cpp  histogram-function.cpp  histogram-with-uncertainties.cpp  histogram.cpp  model.cpp  phys.cpp  producer.cpp  run.cpp  run_mt.cpp  utils.cpp
UserCode/dsperka/wprimetb/theta/src/.bin/: cfg-utils.d  database.d  distribution.d  histogram-function.d  histogram-with-uncertainties.d  histogram.d  main.d  minimizer.d  model.d  phys.d  plugin.d  producer.d  random-utils.d  random.d  run.d  run_mt.d  toymaker.d  utils.d  variables.d
UserCode/dsperka/wprimetb/theta/src/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/test/: lib.py  test-codegen.cpp  test-distribution.cpp  test-sqlite.cpp  test-utils.cpp
UserCode/dsperka/wprimetb/theta/test/.bin/: test-cfg.d  test-codegen.d  test-data.d  test-distribution.d  test-ex.d  test-ex2.d  test-ex3.d  test-exception.d  test-functions.d  test-histogram-function.d  test-histogram-with-uncertainties.d  test-histogram.d  test-log2_dot.d  test-matrix.d  test-minimizer.d  test-model.d  test-nl_gauss.d  test-sqlite.d  test-sysrate.d  test-utils.d  test-variables.d  utils.d
UserCode/dsperka/wprimetb/theta/test/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/utils/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/utils/test/: test.py
UserCode/dsperka/wprimetb/theta/utils/theta_auto/: misc.py
UserCode/dsperka/wprimetb/theta/utils2/: theta-auto.py
UserCode/dsperka/wprimetb/theta/utils2/.svn/: all-wcprops  entries
UserCode/dsperka/wprimetb/theta/utils2/theta_auto/: Model.py  bayesian.py  higgs_datacard.py  test_model.py  theta_interface.py
(+2683 files in other folders)
